# climate-explorer-data-prep

./: .travis.yml  Jenkinsfile  MANIFEST.in  NEWS.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-tests.yml  lint.yml  pypi-publish.yml  python-ci.yml
dp/: argparse_helpers.py  decompose_flow_vectors.py  format_dsg_timeseries.py  format_rvic.py  generate_climos.py  generate_pass.py  generate_prsn.py  split_merged_climos.py  streamflow_helpers.py  units_helpers.py  update_metadata.py  variable information.csv
dp/scripts/: decompose_flow_vectors.py  generate_climos.py  generate_prsn.py  split_merged_climos.py  update_metadata.py
dp/tests/: conftest.py  test_decompose_flow_vectors.py  test_generate_climos.py  test_generate_prsn.py  test_units_helpers.py  test_update_metadata.py
scripts/: decompose_flow_vectors  format-rvic-output.py  format_dsg_timeseries.py  generate_climos  generate_multimodel_ensembles  generate_pass  generate_prsn  generate_streamflow_climos  process-climo-means.sh  split_merged_climos  update_metadata
tests/: conftest.py  test_create_climo_files.py  test_decompose_flow_vectors.py  test_format_dsg.py  test_generate_climos.py  test_generate_prsn.py  test_split_merged_climos.py  test_update_metadata.py
tests/data/: tiny_cdd_seasonal.nc
