[tool.poetry]
name = "dp"
version = "0.8.8"
description = "PCIC Climate Explorer Data Preparation"
authors = ["Rod Glover <rglover@uvic.ca>"]
license = "GPL3"
readme = "README.md"
include = [
        "dp/data/*",
        "tests/data/*.nc"
]

[tool.poetry.dependencies]
python = ">=3.8"
python-dateutil = "^2.8.2"
cdo = "^1.6.0"
Pint = "^0.21" # upgrade after python > 3.9
PyYAML = "^6.0.1"
nchelpers = {url = "https://pypi.pacificclimate.org/packages/nchelpers-5.5.11-py3-none-any.whl#md5=4e7ca60b82da955686791c85c08eff74"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_climos = "dp.scripts.generate_climos:runme"
generate_prsn = "dp.scripts.generate_prsn:runme"
split_merged_climos = "dp.scripts.split_merged_climos:runme"
update_metadata = "dp.scripts.update_metadata:runme"
decompose_flow_vectors = "dp.scripts.decompose_flow_vectors:runme"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
]
